--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threejsgame",
-  "homepage": "https://mcdonalddylan.github.io/ThreeJSReactGame/",
+  "homepage": "https://mcdonalddylan.github.io/ThreeJSReactSite/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
