--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "url": "git+https://github.com/mcdonalddylan/ThreeJSReactSite.git"
   },
   "dependencies": {
+    "@react-three/drei": "^7.19.6",
+    "@react-three/fiber": "^7.0.17",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/user-event": "^12.8.3",
+    "@types/file-type": "^10.9.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.13",
     "@types/node-sass": "^4.11.1",
@@ -21,6 +24,7 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/three": "^0.128.0",
     "bootstrap": "^5.0.1",
+    "file-type": "^16.5.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
