--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "url": "git+https://github.com/mcdonalddylan/ThreeJSReactSite.git"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "npm run build:production",
     "deploy": "gh-pages -d build",
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "start": "bash -ac '. .env.${REACT_APP_ENV}; node scripts/start.js",
+    "start:development": "cross-env REACT_APP_ENV=development npm run start",
+    "start:production": "cross-env REACT_APP_ENV=production npm run start",
+    "build": "bash -ac '. .env.${REACT_APP_ENV}; node scripts/build.js",
+    "build:development": "cross-env REACT_APP_ENV=development npm run build",
+    "build:production": "cross-env REACT_APP_ENV=production npm run build",
     "test": "node scripts/test.js --coverage --watchAll"
   },
   "dependencies": {
@@ -35,6 +39,7 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
